--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <div class="container">
     <div class="header"></div>
     <div class="game">
+      <div class="store">Store: <span class="store-num">0</span></div>
       <div class="pers"></div>
       <div class="block"></div>
     </div>
   </div>
-
+<script src="./gameOver.js"></script>
   <script src="./script.js"></script>
 </body>
 </html>
